# codex-web-sdk

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-publish-summary.json  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: gh-pages.yml
apps/demo/: index.html  package.json  tsconfig.json  vite.config.ts
apps/demo/src/: App.test.tsx  App.tsx  index.css  styles.css
apps/demo/src/components/: BrowserToolEditor.tsx  DemoSidebar.tsx  Workspace.tsx
apps/demo/src/lib/: runtimeConfig.ts  storage.ts  toolDrafts.test.tsx  toolDrafts.ts
crates/codex-web-sdk-wasm/: Cargo.toml
crates/codex-web-sdk-wasm/src/: api.rs  error.rs  lib.rs  runtime.rs  types.rs
scripts/: build-sdk.mjs  build-wasm.sh  demo-e2e.mjs  demo-live.mjs  release-packages.mjs
xtask/codex-web-sdk-xtask/: Cargo.toml
xtask/codex-web-sdk-xtask/src/: main.rs
