[workspace]
members = [
    "crates/codex-web-sdk-wasm",
    "xtask/codex-web-sdk-xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", features = ["derive"] }
js-sys = "0.3.82"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["js", "serde", "v4"] }
wasm-bindgen = "0.2.118"

