[package]
name = "codex-web-sdk-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
